    to pass the type anyway, it offers nothing over using the functions
	directly.
  * Make sure functions always raise MarshalError/UnmarshalError and wrap any
    exceptions thrown by libraries they use.
  * bytes, str and unicode can now all be handed to marshal_ functions, the
    marshalled output will be identical.
  * Unmarshalled strings will always be unicode in py2 and str in py3.

restauth-common 0.6.2 (21 April 2013)

  * Update installation instructions

  ContentHandlers
  * Implement the XMLContentHandler
  * Add the Pickle3ContentHandler for Pickle protocol version 3.
  * The librarypath attribute may now refer to submodules
    (i.e. 'lxml.etree' instead of just 'lxml')
  * Update  documentation, add a few additional testcases

restauth-common 0.6.1 (01 April 2013)

  * Various python3 compatability fixes
  * Rename content handlers to standard python camel case:
    * json --> JSONContentHandler
    * xml --> XMLContentHandler
    * form --> FormContentHandler
   Old names are still available for now.
  * Two new ContentHandlers: PickleContentHandler and YamlContentHandler
  * Add a requirements.txt file
  * Add a minor test-suite to test the import feature.
  * Remove unused (and python2 specific) unmarshal_unicode method
  * FromContentHandler is now almost fully implemented but does not
    support nested dicts.
  * Add the setup.py coverage target.
  * add various new identifiers for pypi.
  * Add useful requires directive to install pyyaml
  * Switch from distutils to distribute, enables automatic installation of
  	dependencies (pyyaml).

restauth-common 0.6.0 (16 August 2012)

  * New exception 'Forbidden' for requests that throw HTTP status 403 Forbidden
  * Adhere to python coding standards
  * Update Copyright notices (some files still contained 'Foobar' as a program name)
  * All python source code is now pep8 clean
  * Cleanup: Remove old methods RestAuthCommon.marshal and
    RestAuthCommon.unmarshal.
